
[package]
name = "pebbles-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = {workspace = true}
pebbles-game-io = {workspace = true}

[build-dependencies]
gear-wasm-builder = {workspace = true}
pebbles-game-io = {workspace = true}

[dev-dependencies]
gtest = {workspace = true}
gclient = {workspace = true}
tokio = {workspace = true}

[workspace]
# members = ["state"]


[workspace.dependencies]
gstd = "1.3.0"
gmeta = "1.3.0"
gear-wasm-builder = "1.3.0"
gtest = "1.3.0"
gclient = "1.3.0"
pebbles-game-io.path = "io"
tokio = "1"
xshell = "0.2"
anyhow = "1"
